--- a/.github/ISSUE_TEMPLATE/FEATURE.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE.yml
@@ -14,28 +14,22 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 #
-# see https://s.apache.org/asfyaml
-github:
-  description: "Apache Maven Clean Plugin"
-  homepage: https://maven.apache.org/plugins/maven-clean-plugin/
-  labels:
-    - java
-    - build-management
-    - maven-plugins
-    - maven-clean-plugin
-    - maven
-  enabled_merge_buttons:
-    squash: true
-    merge: false
-    rebase: true
-  autolink_jira:
-    - MCLEAN
-  del_branch_on_merge: true
-  features:
-    issues: true
 
-notifications:
-  commits: commits@maven.apache.org
-  issues: issues@maven.apache.org
-  pullrequests: issues@maven.apache.org
-  jira_options: link label
+# https://docs.github.com/en/communities/using-templates-to-encourage-useful-issues-and-pull-requests/syntax-for-githubs-form-schema
+
+name: Feature request
+description: File a proposal for new feature, improvement
+labels: ["enhancement"]
+
+body:
+  - type: markdown
+    attributes:
+      value: |
+        Thanks for taking the time to fill out this new feature, improvement proposal.
+
+  - type: textarea
+    id: massage
+    attributes:
+      label: New feature, improvement proposal
+    validations:
+      required: true
