--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -14,28 +14,17 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 #
-# see https://s.apache.org/asfyaml
-github:
-  description: "Apache Maven Clean Plugin"
-  homepage: https://maven.apache.org/plugins/maven-clean-plugin/
-  labels:
-    - java
-    - build-management
-    - maven-plugins
-    - maven-clean-plugin
-    - maven
-  enabled_merge_buttons:
-    squash: true
-    merge: false
-    rebase: true
-  autolink_jira:
-    - MCLEAN
-  del_branch_on_merge: true
-  features:
-    issues: true
 
-notifications:
-  commits: commits@maven.apache.org
-  issues: issues@maven.apache.org
-  pullrequests: issues@maven.apache.org
-  jira_options: link label
+# https://docs.github.com/en/communities/using-templates-to-encourage-useful-issues-and-pull-requests/configuring-issue-templates-for-your-repository#configuring-the-template-chooser
+
+blank_issues_enabled: false
+
+contact_links:
+
+  - name: Project Mailing Lists
+    url: https://maven.apache.org/mailing-lists.html
+    about: Please ask a question or discuss here
+
+  - name: Old JIRA Issues
+    url: https://issues.apache.org/jira/projects/MCLEAN
+    about: Please search old JIRA issues
