--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@ under the License.
     <url>https://github.com/apache/maven-clean-plugin/tree/${project.scm.tag}</url>
   </scm>
   <issueManagement>
-    <system>JIRA</system>
-    <url>https://issues.apache.org/jira/browse/MCLEAN</url>
+    <system>GitHub</system>
+    <url>https://github.com/apache/maven-clean-plugin/issues</url>
   </issueManagement>
   <ciManagement>
     <system>Jenkins</system>
